solar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-solar-app-svc
  namespace: dev-solar-app
spec:
  selector:
    app: dev-solar-app
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
